syntax = "proto3";

option go_package = "github.com/utmstack/UTMStack/agent";

package agent;

service AgentMalwareService {
  rpc GetAgentExclusions(ListExclusionRequest) returns (ListExclusionResponse) {}
  rpc CreateNewMalwareEntry(stream AgentMalwareDetection) returns (stream AgentMalwareDetection) {}
  rpc ChangeMalwareStatus(stream ChangeStatusRequest) returns (stream AgentMalwareDetection) {}
  rpc ListAgentMalware(ListMalwareRequest) returns (ListMalwareResponse) {}
  rpc ListAgentMalwareHistory(ListMalwareHistoryRequest) returns (ListMalwareHistoryResponse) {}
}


message ListExclusionResponse {
  repeated AgentMalwareExclusion exclusions = 1;
}

message ListExclusionRequest {
  int64 agent_id = 1;
}

message ChangeStatusRequest {
  string malware_id = 1;
  MalwareStatus status = 2;
}

enum MalwareStatus {
  NEW = 0;
  DELETED = 1;
  EXCLUDED = 2;
  RESTORED = 3;
}

message AgentMalwareDetection {
  int64 id = 1;
  uint32 agent_id = 2;
  string file_path = 3;
  string sha256 = 4;
  string md5 = 5;
  string description = 6;
  MalwareStatus status = 7;
}

message AgentMalwareHistory {
  int64 id = 1;
  uint32 malware_id = 2;
  MalwareStatus prev_status = 3;
  MalwareStatus to_status = 4;
  string changed_by = 5;
}

message AgentMalwareExclusion {
  int64 id = 1;
  string exclude_file_path = 2;
  string excluded_by = 3;
  string exclude_description = 4;
  int64 agent_id = 5;
}

// ListAgentsRequest message definition
message ListMalwareRequest {
  int32 page_number = 1;
  int32 page_size = 2;
  string search_query = 3;
  repeated string sort_by = 4;
  bool sort_descending = 5;
}

// ListAgentsResponse message definition
message ListMalwareResponse {
  repeated AgentMalwareDetection malware = 1;
  int32 total_pages = 2;
  int32 total_results = 3;
}

message ListMalwareHistoryRequest {
  int32 page_number = 1;
  int32 page_size = 2;
  string search_query = 3;
  repeated string sort_by = 4;
  bool sort_descending = 5;
}

// ListAgentsResponse message definition
message ListMalwareHistoryResponse {
  repeated AgentMalwareHistory malware = 1;
  int32 total_pages = 2;
  int32 total_results = 3;
}